# palautusrepositorio

./: .gitignore  README.md
viikko1/nhl-statistics-1/src/: statistics_service.py
viikko2/git-branch-harjoitus/: index.py  tulo.py
viikko2/nhl-reader/src/: index.py  player.py
viikko2/poetry-web/: pyproject.toml
viikko3/hello-robot/: log.html  output.xml  report.html
viikko3/hello-robot/src/tests/: increase_counter.robot
viikko3/web-login/src/services/: user_service.py
viikko3/web-login/src/tests/: login.robot  register.robot  resource.robot
viikko4/: retro.md
viikko4/maksukortti-mock/src/: kassapaate.py
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/verkkokauppa/: .coverage
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/: important.txt
viikko5/int-joukko/src/: int_joukko.py
viikko5/laskin/: pyproject.toml
viikko5/tennis/src/: tennis_game.py
viikko6/query-language/src/: index.py  matchers.py  query_builder.py
viikko7/: referaatti.md
viikko7/kivi-paperi-sakset/src/: index.py  kivi_sakset_paperi.py  kps_parempi_tekoaly.py  kps_pelaaja_vs_pelaaja.py  kps_tekoaly.py  tekoaly.py  tekoaly_parannettu.py  tuomari.py
