[tool.poetry]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = ["ville03 <ville.r.p.parkkinen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
